		* Show completed downloads in aMulegui
		* Fixed international file names on Windows
		* Fixed hangup of EC connection in aMulegui
		* Fixed category deletion in aMuled
		* Improved memory usage and speed of IP filter
		* Load IP filter in the background on startup
		* Show when a Kad search is finished in aMulegui (remove '!')
		* Fixed "pause/cancel/resume all" in aMulecmd

	Vollstrecker:
		* Unify copyright lines
		* Fixed clean and distclean targets for make
		* Various Updates in debian/ see debian/changelog
		* Added crash handling in command-line tools
		* Fix for autoconf-2.64.
		* Raised minimum wxWidgets version to 2.8.8
		* Make amulecmd help command work without connection
		* New translation concept for manpages
		* KDE Plasma applet to show stats

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log
		* Add option to specify amuleweb binary location
		* Make EC authentication procedure more secure
		* Add support for categories to ed2k
		* Backup config file on shutdown

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.
		* btkaos for his important work finding the source of bugs.
		* myth for seeing when everyone else was blind and uncovering
		  the grandfather of all fuck-ups
		* mirko.g for being so committed to compile aMule on Snow Leopard.

--------------------------------------------------------------------------------

Version 2.2.6 - The "we don't have holidays" version.
----------
2009-09-16

	GonoszTopi:
		* Fixed obfuscated server UDP communication.
		* Fixed cross-endian Kad node verification.
		* Fixed name conflict in builtin PHP parser.
		* Fixed configure finding unwanted Crypto++ installations.

	Marcell:
		* Properly update transfers tab's bottom pane's title.

	mr_hyde:
		* Fixed a bug in detecting and using the fallocate() function.

	Sam Hocevar: